--- a/contact.html
+++ b/contact.html
@@ -74,7 +74,7 @@
           <p>Our muscles and the brain</p>
         </div>
         <div class="col-lg-4 col-sm-6 text-center mb-4">
-          <img class="rounded-circle img-fluid d-block mx-auto" src="img/Johnny.jpg" alt="jay">
+          <img class="rounded-circle img-fluid d-block mx-auto" src="img/Johnny.png" alt="jay">
           <h3>Johnny Medina <br>
             <small>Social Media expert / Fire Fighter</small>
           </h3>
