--- a/contact.html
+++ b/contact.html
@@ -78,7 +78,7 @@
           <h3>Johnny Medina <br>
             <small>Social Media expert / Fire Fighter</small>
           </h3>
-          <p>If theres a fire in our office. we got johnny!</p>
+          <p>Our graphic designer, and fire official.</p>
         </div>
       </div>
 
