--- a/listing_suv.html
+++ b/listing_suv.html
@@ -38,9 +38,9 @@
               <a class="nav-link" href="listing_suv.html">Product listing</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="Login.html">Login/Signup</a>
+              <a class="nav-link" href="login.html">Login/Signup</a>
             </li>
-          </ul>
+          </ul>      
         </div>
       </div>
     </nav>
